@@ -1,1 +1,10 @@
 # TeamPoint
+
+## How to run it ?
+
+- git clone https://github.com/Salim-Azh/TeamPoint.git
+- launch Intellij IDEA
+- open Teampoint/prototypes as project
+- add run config for class gui.view.LoginView
+- edit the vm run config arguments with : `--module-path path/to/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml`
+- run the project with that config
